tests/netconvert/errors/unknown_option/errors.netconvert
Error: On processing option '--no-duration-log':
 No option with the name 'no-duration-log' exists.
Error: On processing option '--routes=routes.rou.xml':
 No option with the name 'routes' exists.
Error: On processing option '--test_this_funky_but_not_exitsing_option':
 No option with the name 'test_this_funky_but_not_exitsing_option' exists.
Error: Could not parse commandline options.
Quitting (on error).
